GS-10226 1. create sources using maven 2. run JUnits using maven 3. clean .classpath config
svn path=/xap/trunk/openspaces/; revision=131859


Former-commit-id: af1b45d2c75c13c7daa61ebb8b65a58820607f43